<resources>
    <string name="app_name">Country Explorer</string>
    <string name="region">Region</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
    <string name="subregion">Subregion</string>
    <string name="languages">Languages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_cache">Clear cache</string>
    <string name="borders">Borders</string>
</resources>